...
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:onClick="markComplete"
        android:text="@string/complete"
        app:layout_constraintBottom_toBottomOf="@+id/todo_add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todo_scrollview" />

    <Button
        android:id="@+id/todo_delete_button"
        android:layout_width="wrap_content"
...
